src/tests/snapshots/protocols__frontend__typecheck__tests__aes128.snap
---
source: src/frontend/typecheck.rs
expression: content
---
warning: Inferred RHS type as BitVec(128) from LHS type BitVec(128).
   ┌─ examples/tinyaes128/aes128.prot:14:3
   │
14 │   dut.state := X;
   │   ^^^^^^^^^^^^^^^ Inferred RHS type as BitVec(128) from LHS type BitVec(128).

warning: Inferred RHS type as BitVec(128) from LHS type BitVec(128).
   ┌─ examples/tinyaes128/aes128.prot:15:3
   │
15 │   dut.key := X;
   │   ^^^^^^^^^^^^^ Inferred RHS type as BitVec(128) from LHS type BitVec(128).
