src/tests/snapshots/protocols__frontend__typecheck__tests__aes128_expand_key.snap
---
source: src/frontend/typecheck.rs
expression: content
---
warning: Inferred RHS type as BitVec(128) from LHS type BitVec(128).
   ┌─ examples/tinyaes128/aes128_expand_key.prot:13:3
   │
13 │   dut.input := X;
   │   ^^^^^^^^^^^^^^^ Inferred RHS type as BitVec(128) from LHS type BitVec(128).
