src/tests/snapshots/protocols__frontend__typecheck__tests__aes128_round.snap
---
source: src/frontend/typecheck.rs
expression: content
---
warning: Inferred RHS type as BitVec(128) from LHS type BitVec(128).
   ┌─ examples/tinyaes128/aes128_round.prot:13:3
   │
13 │   dut.state := X;
   │   ^^^^^^^^^^^^^^^ Inferred RHS type as BitVec(128) from LHS type BitVec(128).

warning: Inferred RHS type as BitVec(128) from LHS type BitVec(128).
   ┌─ examples/tinyaes128/aes128_round.prot:16:3
   │
16 │   dut.key := X;
   │   ^^^^^^^^^^^^^ Inferred RHS type as BitVec(128) from LHS type BitVec(128).
