src/tests/snapshots/protocols__frontend__typecheck__tests__calyx_go_done_struct.snap
---
source: src/frontend/typecheck.rs
expression: content
---
error: Type mismatch in binary operation: BitVec(1) and BitVec(32)
   ┌─ tests/calyx_go_done/calyx_go_done_struct.prot:11:11
   │
11 │   while !(dut.done == 1) {
   │           ^^^^^^^^ Type mismatch in binary operation: BitVec(1) and BitVec(32)

warning: Inferred RHS type as BitVec(32) from LHS type BitVec(32).
   ┌─ tests/calyx_go_done/calyx_go_done_struct.prot:15:3
   │
15 │   dut.ii := X;
   │   ^^^^^^^^^^^^ Inferred RHS type as BitVec(32) from LHS type BitVec(32).

error: Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.
   ┌─ tests/calyx_go_done/calyx_go_done_struct.prot:16:3
   │
16 │   oo := dut.oo;
   │   ^^^^^^^^^^^^^ Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.
